[package]
name = "core-mqtt-sys"
version = "0.1.0"
authors = ["awsa2ron <kaixu@amazon.com>"]
edition = "2021"
description = "coreMQTT client library in rust (unofficial)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59"